# jdepp-python

./: CMakeLists.txt  LICENSE  MANIFEST.in  README.md  bootstrap-cpp-cli.sh  bootstrap-cpp-python.sh  jdepp.BSD  pyproject.toml  setup.py  vcsetup-32.bat
.github/workflows/: wheels.yml
benchmark/: README.md  prepare_dataset.py  requirements.txt  run-jdepp.py  run-multiprocess-jdepp.py
cpp_cli/: jdepp-app.cc
example/: simple_jdepp.py
jdepp/: __init__.py  cedar.h  classify.cc  classify.h  config.h  io-util.cc  io-util.hh  jdepp_tools.py  jdepp_utils.py  kernel.cc  kernel.h  linear.cc  linear.h  main.py  optparse.h  pa.h  pdep.cc  pdep.h  python-binding-jdepp.cc  timer.h  typedef.h
test/: Makefile  import-test.py  test-001.py  test-batch.py
